--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon",
-    "test": "jest"
+    "dev": "nodemon"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "uuidv4": "^6.0.7"
+    "uuidv4": "^6.1.0"
   },
   "devDependencies": {
-    "jest": "^25.2.6",
-    "nodemon": "^2.0.2",
-    "supertest": "^4.0.2"
+    "nodemon": "^2.0.4"
   }
 }
